Adding more styling

--- a/index.html
+++ b/index.html
@@ -3,8 +3,214 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	
+	<article id="game1">
+		<header>
+			<h2>Mario Bros.</h2>
+		</header>
+		<section>
+			<img src="images/imgres-1.jpg">
+			<p>It has been featured as a minigame in the Super Mario Advance series and numerous other games. Mario Bros. has been re-released for the Wii's, Nintendo 3DS's, and Wii U's Virtual Console services in Japan, North America, Europe and Australia.</p>
+			<p>Available</p>
+		</section>
+		<section>
+			<h3>Specifications</h3>
+			<p>Size: 4" x 4"</p>
+			<p>Weight: 8 oz.</p>
+			<footer>Specifications valid until 11/01/2016</footer>
+		</section>
+		<section>
+			<h4>Pricing</h4>
+			<p>1: $1.99</p>
+			<p>2-50: $1.49</p>
+			<p>51+: $0.99</p>
+		</section>
+	</article>
+
+	<article id="game2">
+		<header>
+			<h2>Kirby's Adventure</h2>
+		</header>
+		<section>
+			<img src="images/imgres-2.jpg">
+			<p>Like the majority of Kirby video games, Kirby's Adventure is a platformer. The game consists of seven worlds, each containing a set of regular levels, a boss fight, and a Warp Star door (which enables Kirby to travel from world to world).</p>
+			<p>Available</p>
+		</section>
+		<section>
+			<h3>Specifications</h3>
+			<p>Size: 4" x 4"</p>
+			<p>Weight: 8 oz.</p>
+			<footer>Specifications valid until 11/01/2016</footer>
+		</section>
+		<section>
+			<h4>Pricing</h4>
+			<p>1: $1.99</p>
+			<p>2-50: $1.49</p>
+			<p>51+: $0.99</p>
+		</section>
+	</article>
+
+	<article id="game3">
+		<header>
+			<h2>Mario Bros. 3</h2>
+		</header>
+		<section>
+			<img src="images/imgres-3.jpg">
+			<p>Super Mario Bros. 3 is a 1988 platform video game developed and published by Nintendo for the Nintendo Entertainment System video game console. It is the third official overall installment in the Super Mario Bros. series.</p>
+			<p>Available</p>
+		</section>
+		<section>
+			<h3>Specifications</h3>
+			<p>Size: 4" x 4"</p>
+			<p>Weight: 8 oz.</p>
+			<footer>Specifications valid until 11/01/2016</footer>
+		</section>
+		<section>
+			<h4>Pricing</h4>
+			<p>1: $1.99</p>
+			<p>2-50: $1.49</p>
+			<p>51+: $0.99</p>
+		</section>
+	</article>
+
+	<article id="game4">
+		<header>
+			<h2>Adventure of Link</h2>
+		</header>
+		<section>
+			<img src="images/imgres-4.jpg">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum velit cupiditate, quo. Itaque natus sed praesentium eaque ullam ab excepturi deserunt aliquam cumque. Enim at quas ipsa, reiciendis fugiat vitae.</p>
+			<p>Available</p>
+		</section>
+		<section>
+			<h3>Specifications</h3>
+			<p>Size: 4" x 4"</p>
+			<p>Weight: 8 oz.</p>
+			<footer>Specifications valid until 11/01/2016</footer>
+		</section>
+		<section>
+			<h4>Pricing</h4>
+			<p>1: $1.99</p>
+			<p>2-50: $1.49</p>
+			<p>51+: $0.99</p>
+		</section>
+	</article>
+
+	<article id="game5">
+		<header>
+			<h2>Kid Icarus</h2>
+		</header>
+		<section>
+			<img src="images/imgres-5.jpg">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum velit cupiditate, quo. Itaque natus sed praesentium eaque ullam ab excepturi deserunt aliquam cumque. Enim at quas ipsa, reiciendis fugiat vitae.</p>
+			<p>Available</p>
+		</section>
+		<section>
+			<h3>Specifications</h3>
+			<p>Size: 4" x 4"</p>
+			<p>Weight: 8 oz.</p>
+			<footer>Specifications valid until 11/01/2016</footer>
+		</section>
+		<section>
+			<h4>Pricing</h4>
+			<p>1: $1.99</p>
+			<p>2-50: $1.49</p>
+			<p>51+: $0.99</p>
+		</section>
+	</article>
+
+	<article id="game6">
+		<header>
+			<h2>Ice Climber</h2>
+		</header>
+		<section>
+			<img src="images/imgres-6.jpg">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum velit cupiditate, quo. Itaque natus sed praesentium eaque ullam ab excepturi deserunt aliquam cumque. Enim at quas ipsa, reiciendis fugiat vitae.</p>
+			<p>Available</p>
+		</section>
+		<section>
+			<h3>Specifications</h3>
+			<p>Size: 4" x 4"</p>
+			<p>Weight: 8 oz.</p>
+			<footer>Specifications valid until 11/01/2016</footer>
+		</section>
+		<section>
+			<h4>Pricing</h4>
+			<p>1: $1.99</p>
+			<p>2-50: $1.49</p>
+			<p>51+: $0.99</p>
+		</section>
+	</article>
+
+	<article id="game7">
+		<header>
+			<h2>Tecmo Bowl</h2>
+		</header>
+		<section>
+			<img src="images/imgres-7.jpg">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum velit cupiditate, quo. Itaque natus sed praesentium eaque ullam ab excepturi deserunt aliquam cumque. Enim at quas ipsa, reiciendis fugiat vitae.</p>
+			<p>Available</p>
+		</section>
+		<section>
+			<h3>Specifications</h3>
+			<p>Size: 4" x 4"</p>
+			<p>Weight: 8 oz.</p>
+			<footer>Specifications valid until 11/01/2016</footer>
+		</section>
+		<section>
+			<h4>Pricing</h4>
+			<p>1: $1.99</p>
+			<p>2-50: $1.49</p>
+			<p>51+: $0.99</p>
+		</section>
+	</article>
+
+	<article id="game8">
+		<header>
+			<h2>Final Fantasy</h2>
+		</header>
+		<section>
+			<img src="images/imgres-8.jpg">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum velit cupiditate, quo. Itaque natus sed praesentium eaque ullam ab excepturi deserunt aliquam cumque. Enim at quas ipsa, reiciendis fugiat vitae.</p>
+			<p>Available</p>
+		</section>
+		<section>
+			<h3>Specifications</h3>
+			<p>Size: 4" x 4"</p>
+			<p>Weight: 8 oz.</p>
+			<footer>Specifications valid until 11/01/2016</footer>
+		</section>
+		<section>
+			<h4>Pricing</h4>
+			<p>1: $1.99</p>
+			<p>2-50: $1.49</p>
+			<p>51+: $0.99</p>
+		</section>
+	</article>
+
+	<article id="game9">
+		<header>
+			<h2>Mario Bros. 2</h2>
+		</header>
+		<section>
+			<img src="images/imgres-9.jpg">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum velit cupiditate, quo. Itaque natus sed praesentium eaque ullam ab excepturi deserunt aliquam cumque. Enim at quas ipsa, reiciendis fugiat vitae.</p>
+			<p>Available</p>
+		</section>
+		<section>
+			<h3>Specifications</h3>
+			<p>Size: 4" x 4"</p>
+			<p>Weight: 8 oz.</p>
+			<footer>Specifications valid until 11/01/2016</footer>
+		</section>
+		<section>
+			<h4>Pricing</h4>
+			<p>1: $1.99</p>
+			<p>2-50: $1.49</p>
+			<p>51+: $0.99</p>
+		</section>
+	</article>
 </body>
 </html>
