--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 		<section>
 			<img src="images/imgres-1.jpg">
 			<p>It has been featured as a minigame in the Super Mario Advance series and numerous other games. Mario Bros. has been re-released for the Wii's, Nintendo 3DS's, and Wii U's Virtual Console services in Japan, North America, Europe and Australia.</p>
-			<p>Available</p>
+			<p class="available">Available</p>
 		</section>
-		<section>
+		<section class="bold">
 			<h3>Specifications</h3>
 			<p>Size: 4" x 4"</p>
 			<p>Weight: 8 oz.</p>
 			<footer>Specifications valid until 11/01/2016</footer>
 		</section>
-		<section>
+		<section class="bold">
 			<h4>Pricing</h4>
 			<p>1: $1.99</p>
 			<p>2-50: $1.49</p>
@@ -36,15 +36,15 @@
 		<section>
 			<img src="images/imgres-2.jpg">
 			<p>Like the majority of Kirby video games, Kirby's Adventure is a platformer. The game consists of seven worlds, each containing a set of regular levels, a boss fight, and a Warp Star door (which enables Kirby to travel from world to world).</p>
-			<p>Available</p>
+			<p class="available">Available</p>
 		</section>
-		<section>
+		<section class="bold">
 			<h3>Specifications</h3>
 			<p>Size: 4" x 4"</p>
 			<p>Weight: 8 oz.</p>
 			<footer>Specifications valid until 11/01/2016</footer>
 		</section>
-		<section>
+		<section class="bold">
 			<h4>Pricing</h4>
 			<p>1: $1.99</p>
 			<p>2-50: $1.49</p>
@@ -59,15 +59,15 @@
 		<section>
 			<img src="images/imgres-3.jpg">
 			<p>Super Mario Bros. 3 is a 1988 platform video game developed and published by Nintendo for the Nintendo Entertainment System video game console. It is the third official overall installment in the Super Mario Bros. series.</p>
-			<p>Available</p>
+			<p class="available">Available</p>
 		</section>
-		<section>
+		<section class="bold">
 			<h3>Specifications</h3>
 			<p>Size: 4" x 4"</p>
 			<p>Weight: 8 oz.</p>
 			<footer>Specifications valid until 11/01/2016</footer>
 		</section>
-		<section>
+		<section class="bold">
 			<h4>Pricing</h4>
 			<p>1: $1.99</p>
 			<p>2-50: $1.49</p>
@@ -82,15 +82,15 @@
 		<section>
 			<img src="images/imgres-4.jpg">
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum velit cupiditate, quo. Itaque natus sed praesentium eaque ullam ab excepturi deserunt aliquam cumque. Enim at quas ipsa, reiciendis fugiat vitae.</p>
-			<p>Available</p>
+			<p class="available">Available</p>
 		</section>
-		<section>
+		<section class="bold">
 			<h3>Specifications</h3>
 			<p>Size: 4" x 4"</p>
 			<p>Weight: 8 oz.</p>
 			<footer>Specifications valid until 11/01/2016</footer>
 		</section>
-		<section>
+		<section class="bold">
 			<h4>Pricing</h4>
 			<p>1: $1.99</p>
 			<p>2-50: $1.49</p>
@@ -105,15 +105,15 @@
 		<section>
 			<img src="images/imgres-5.jpg">
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum velit cupiditate, quo. Itaque natus sed praesentium eaque ullam ab excepturi deserunt aliquam cumque. Enim at quas ipsa, reiciendis fugiat vitae.</p>
-			<p>Available</p>
+			<p class="available">Available</p>
 		</section>
-		<section>
+		<section class="bold">
 			<h3>Specifications</h3>
 			<p>Size: 4" x 4"</p>
 			<p>Weight: 8 oz.</p>
 			<footer>Specifications valid until 11/01/2016</footer>
 		</section>
-		<section>
+		<section class="bold">
 			<h4>Pricing</h4>
 			<p>1: $1.99</p>
 			<p>2-50: $1.49</p>
@@ -128,15 +128,15 @@
 		<section>
 			<img src="images/imgres-6.jpg">
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum velit cupiditate, quo. Itaque natus sed praesentium eaque ullam ab excepturi deserunt aliquam cumque. Enim at quas ipsa, reiciendis fugiat vitae.</p>
-			<p>Available</p>
+			<p class="available">Available</p>
 		</section>
-		<section>
+		<section class="bold">
 			<h3>Specifications</h3>
 			<p>Size: 4" x 4"</p>
 			<p>Weight: 8 oz.</p>
 			<footer>Specifications valid until 11/01/2016</footer>
 		</section>
-		<section>
+		<section class="bold">
 			<h4>Pricing</h4>
 			<p>1: $1.99</p>
 			<p>2-50: $1.49</p>
@@ -151,15 +151,15 @@
 		<section>
 			<img src="images/imgres-7.jpg">
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum velit cupiditate, quo. Itaque natus sed praesentium eaque ullam ab excepturi deserunt aliquam cumque. Enim at quas ipsa, reiciendis fugiat vitae.</p>
-			<p>Available</p>
+			<p class="available">Available</p>
 		</section>
-		<section>
+		<section class="bold">
 			<h3>Specifications</h3>
 			<p>Size: 4" x 4"</p>
 			<p>Weight: 8 oz.</p>
 			<footer>Specifications valid until 11/01/2016</footer>
 		</section>
-		<section>
+		<section class="bold">
 			<h4>Pricing</h4>
 			<p>1: $1.99</p>
 			<p>2-50: $1.49</p>
@@ -174,15 +174,15 @@
 		<section>
 			<img src="images/imgres-8.jpg">
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum velit cupiditate, quo. Itaque natus sed praesentium eaque ullam ab excepturi deserunt aliquam cumque. Enim at quas ipsa, reiciendis fugiat vitae.</p>
-			<p>Available</p>
+			<p class="available">Available</p>
 		</section>
-		<section>
+		<section class="bold">
 			<h3>Specifications</h3>
 			<p>Size: 4" x 4"</p>
 			<p>Weight: 8 oz.</p>
 			<footer>Specifications valid until 11/01/2016</footer>
 		</section>
-		<section>
+		<section class="bold">
 			<h4>Pricing</h4>
 			<p>1: $1.99</p>
 			<p>2-50: $1.49</p>
@@ -197,15 +197,15 @@
 		<section>
 			<img src="images/imgres-9.jpg">
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum velit cupiditate, quo. Itaque natus sed praesentium eaque ullam ab excepturi deserunt aliquam cumque. Enim at quas ipsa, reiciendis fugiat vitae.</p>
-			<p>Available</p>
+			<p class="available">Available</p>
 		</section>
-		<section>
+		<section class="bold">
 			<h3>Specifications</h3>
 			<p>Size: 4" x 4"</p>
 			<p>Weight: 8 oz.</p>
 			<footer>Specifications valid until 11/01/2016</footer>
 		</section>
-		<section>
+		<section class="bold">
 			<h4>Pricing</h4>
 			<p>1: $1.99</p>
 			<p>2-50: $1.49</p>
